llvm-gcc-4.2-2.9/gcc/testsuite/objc.dg/objc-foreach-syntax.m
/* APPLE LOCAL file radar 5925639 */
/* { dg-options "-std=c99 -mmacosx-version-min=10.5" } */
/* { dg-do compile } */

static int test_NSURLGetResourceValueForKey( id keys )
{
 for ( id key; in keys) { /* { dg-error "expected expression before" } */
  } 
}
